# aml_ls

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  rustc-ice-2025-07-01T01_35_16-92908.txt
aml-config/: Cargo.toml
aml-config/src/: lib.rs
aml-core/: Cargo.toml
aml-core/src/: diagnostics.rs  lib.rs  location.rs  workspace.rs
aml-docs/: Cargo.toml
aml-docs/src/: lib.rs
aml-parser/: Cargo.toml
aml-parser/src/: error.rs  expressions.rs  lexer.rs  lib.rs  parser.rs  token.rs
aml-parser/src/snapshots/: aml_parser__expressions__test__add.snap  aml_parser__expressions__test__and.snap  aml_parser__expressions__test__array_index.snap  aml_parser__expressions__test__brackets.snap  aml_parser__expressions__test__div.snap  aml_parser__expressions__test__dot_lookup.snap  aml_parser__expressions__test__either.snap  aml_parser__expressions__test__equality.snap  aml_parser__expressions__test__function.snap  aml_parser__expressions__test__function_no_args.snap  aml_parser__expressions__test__list.snap  aml_parser__expressions__test__map.snap  aml_parser__expressions__test__map_lookup.snap  aml_parser__expressions__test__modulo.snap  aml_parser__expressions__test__mul.snap  aml_parser__expressions__test__nested_list.snap  aml_parser__expressions__test__not.snap  aml_parser__expressions__test__sub.snap  aml_parser__lexer__tests__attributes.snap  aml_parser__lexer__tests__indentation.snap  aml_parser__lexer__tests__lexer.snap  (+4 more)
aml-semantic/: Cargo.toml
aml-semantic/src/: analyzer.rs  diagnostics.rs  global_scope.rs  lib.rs  scope.rs  symbol_table.rs  tests.rs
aml-semantic/src/analysis/: mod.rs  node_analyzer.rs  text_validation.rs
aml-semantic/src/validation/: attribute_schema.rs  color.rs  expression.rs  mod.rs  type_checker.rs
aml-syntax/: Cargo.toml
aml-syntax/src/: ast.rs  error.rs  expressions.rs  lib.rs  parser.rs  parser.rs~
aml-token/: Cargo.toml
aml-token/src/: error.rs  lexer.rs  lib.rs  token.rs
scripts/: pyproject.toml  update_element_docs.py
src/: lexer.rs  main.rs  server.rs
src/core/: document_manager.rs  mod.rs  project_manager.rs  template_service.rs
src/features/: diagnostics.rs  hover.rs  mod.rs
src/server/: capabilities.rs  mod.rs
templates/: sample.aml
(+144 files in other folders)
