[workspace]
resolver = "2"
members = ["aml-parser"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
aml-parser = { path = "aml-parser" }
thiserror = "2.0.12"
insta = { version = "1.43.1", features = ["yaml"] }
serde = { version = "1.0.219", features = ["derive"] }

[package]
name = "aml_ls"
version.workspace = true
edition.workspace = true

[dependencies]
aml-parser.workspace = true
thiserror.workspace = true
tokio = { version = "1.45.1", features = ["io-std", "macros", "rt", "rt-multi-thread"] }
clap = { version = "4.5.40", features = ["derive"] }
tower-lsp = "0.20.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
