[workspace]
resolver = "2"
members = ["aml-core", "aml-token", "aml-syntax", "aml-semantic", "aml-docs"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
aml-core = { path = "aml-core" }
aml-token = { path = "aml-token" }
aml-syntax = { path = "aml-syntax" }
aml-semantic = { path = "aml-semantic" }
aml-docs = { path = "aml-docs" }
thiserror = "2.0.12"
insta = { version = "1.43.1", features = ["yaml"] }
serde = { version = "1.0.219", features = ["derive"] }

[package]
name = "aml_ls"
version.workspace = true
edition.workspace = true

[dependencies]
aml-core.workspace = true
aml-token.workspace = true
aml-syntax.workspace = true
aml-semantic.workspace = true
aml-docs.workspace = true
thiserror.workspace = true
tokio = { version = "1.45.1", features = ["io-std", "macros", "rt", "rt-multi-thread"] }
clap = { version = "4.5.40", features = ["derive"] }
tower-lsp = "0.20.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
