[package]
name = "aml-semantic"
version.workspace = true
edition.workspace = true

[dependencies]
aml-core.workspace = true
aml-token.workspace = true
aml-syntax.workspace = true
serde.workspace = true
thiserror.workspace = true

tokio = { version = "1.45.1", features = ["io-std"]}

[dev-dependencies]
insta.workspace = true
